# isA_Cloud

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  Makefile  Makefile.grpc  README.md  SECRETS.md  clean-docker.sh  cleanup-ecr.sh  docker-compose.yml  go.mod  go.sum  how_to_consul.md  how_to_service_user.md  temp.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
deployments/: README.md  services.yaml
docs/: ARCHITECTURE_ANALYSIS_RECOMMENDATIONS.md  CONSUL_FLOW.md  DEVICE_SERVICE_TESTING.md  GO_MICROSERVICE_DEVELOPMENT_GUIDE.md  LOGGING.md  MQTT_SERVICE_TESTING.md  NOTIFICATION_SERVICE_TESTING.md  QUICK_FIX_SUPABASE.md  SERVICE_STATUS_REPORT.md  STAGING_DEPLOYMENT_GUIDE.md  STORAGE_SERVICE_TESTING.md  SUPABASE_DOCKER_FIX.md  TASK_SERVICE_GATEWAY_TESTING.md  apisix_consul_integration_guide.md  apisix_route_consul_sync.md  auth-cookie-domain-sso.md  cdd_guide.md  cicd.md  current_status.md  grpc.md  how_to_consul.md  infra_grpc_service.md  observability-contract.md  observability-migration-plan.md  (+6 more)
fleet/: README.md  pyproject.toml
fleet/console-ui/: app.css  app.js  index.html  server.py
fleet/fleet_console/: __init__.py  api.py  intake.py  issuance.py  models.py  queries.py  telemetry_credential.py  telemetry_models.py  telemetry_queries.py
fleet/migrations/: 0001_issuance_ledger.sql  0002_deployment_secret.sql  0003_telemetry_record.sql  0004_issuance_revocation.sql
fleet/tests/: test_api.py  test_intake.py  test_intake_contract.py  test_issuance.py  test_telemetry_credential.py
isA_common/: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
isA_common/docs/: cdd_guide.md  current_status.md  how_to_grpc_client.md  how_to_nats_client.md
isA_common/docs/design/: README.md
isA_common/docs/domain/: README.md
isA_common/docs/instruction/: how_to_consul_client.md  how_to_duckdb_client.md  how_to_loki_client.md  how_to_minio_client.md  how_to_mqtt_client.md  how_to_mqtt_client_adapter.md  how_to_nats_client.md  how_to_neo4j_client.md  how_to_postgres_client.md  how_to_qdrant_client.md  how_to_redis_client.md
isA_common/docs/prd/: README.md
isA_common/examples/: consul_client_examples.py  duck_client_examples.py  loki_client_examples.py  minio_client_examples.py  mqtt_client_examples.py  nats_client_examples.py  neo4j_client_examples.py  plugin.service.example.yaml  postgres_client_examples.py  qdrant_client_examples.py  redis_client_examples.py  supa_client_examples.py
isA_common/isa_common/: __init__.py  async_base_client.py  async_chroma_client.py  async_client_config.py  async_duckdb_client.py  async_falkor_client.py  async_local_storage_client.py  async_loki_client.py  async_memory_client.py  async_minio_client.py  async_mqtt_client.py  async_nats_client.py  async_neo4j_client.py  async_postgres_client.py  async_qdrant_client.py  async_redis_client.py  async_sqlite_client.py  base_client.py  brand.py  consul_client.py  duckdb_client.py  edition.py  license.py  license_sign.py  licensing.py  loki_client.py  loki_handler.py  metrics.py  minio_client.py  mqtt_client.py  nats_client.py  neo4j_client.py  observability.py  plugin.py  postgres_client.py  quota_enforcer.py  redis_client.py  service_discovery.py  supabase_client.py  tracing.py
isA_common/isa_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
isA_common/isa_common/events/: __init__.py  base_event_models.py  base_event_publisher.py  base_event_subscriber.py  billing_event_publisher.py  billing_events.py
isA_common/isa_common/proto/: __init__.py  common_pb2.py  mqtt_service_pb2.py  mqtt_service_pb2_grpc.py  supabase_service_pb2.py  supabase_service_pb2_grpc.py
isA_common/scripts/: cleanup_consul.sh  pypi_release.sh
isA_common/tests/: TDD_CONTRACT.md  conftest.py  pytest.ini  test_mqtt_device_stream.py  test_webhook_server.py
isA_common/tests/component/: __init__.py  test_metrics_component.py  test_plugin_registry_component.py  test_tracing_component.py
isA_common/tests/component/clients/: __init__.py
isA_common/tests/component/clients/grpc_client/: __init__.py  test_channel_health_tdd.py
isA_common/tests/component/golden/: __init__.py  test_async_base_client_golden.py
isA_common/tests/contracts/: README.md  __init__.py
isA_common/tests/contracts/grpc_client/: __init__.py  data_contract.py  logic_contract.md
isA_common/tests/duck/: test_async_duckdb.py  test_duckdb_functional.sh
isA_common/tests/falkor/: test_async_falkor.py
isA_common/tests/integration/: test_loki_integration.py  test_observability_integration.py  test_quota_enforcer_integration.py
isA_common/tests/loki/: LOKI_ALIGNMENT_ANALYSIS.md  test_loki_functional.sh
isA_common/tests/minio/: test_async_minio.py  test_minio_functional.sh
isA_common/tests/mqtt/: MQTT_ALIGNMENT_ANALYSIS.md  test_async_mqtt.py  test_mqtt_functional.sh
isA_common/tests/nats/: test_async_nats.py  test_async_nats_reconnect.py  test_consumer_knobs.py  test_nats_functional.sh
isA_common/tests/neo4j/: test_async_neo4j.py
isA_common/tests/postgres/: test_async_postgres.py
isA_common/tests/qdrant/: test_async_qdrant.py
isA_common/tests/redis/: TEST_RESULTS.md  test_async_redis.py  test_redis_functional.sh
isA_common/tests/smoke/: conftest.py  test_billing_pipeline.py
isA_common/tests/supa/: SUPABASE_ALIGNMENT_ANALYSIS.md  test_supabase_functional.sh
isA_common/tests/unit/: conftest.py  test_async_consul_unit.py  test_chroma_unit.py  test_client_aexit_cleanup.py  test_consul_unit.py  test_datetime_utcnow_fix.py  test_duckdb_unit.py  test_edition.py  test_executor_shutdown.py  test_falkor_unit.py  test_idempotency_unit.py  test_license.py  test_license_sign.py  test_licensing_middleware.py  test_licensing_unit.py  test_local_storage_unit.py  test_loki_unit.py  test_memory_unit.py  test_metrics_unit.py  test_minio_unit.py  test_mqtt_unit.py  test_neo4j_unit.py  test_observability_unit.py  test_plugin_manifest.py  test_postgres_unit.py  test_qdrant_unit.py  test_quota_enforcer_unit.py  test_redis_unit.py  test_sqlite_unit.py  test_tracing_unit.py
(+1189 files in other folders)
