[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isa-common"
version = "0.3.1"
description = "Shared Python infrastructure library for isA platform"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "isA Platform", email = "dev@isa-platform.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-consul2>=0.1.5",
    # Native async database/service drivers
    "asyncpg>=0.29.0",  # Async PostgreSQL
    "neo4j>=5.0.0",  # Neo4j native driver
    "aioboto3>=12.0.0",  # Async S3/MinIO client
    "aiofiles>=23.0.0",  # Async file I/O for streaming downloads
    "redis>=5.0.0",  # Async Redis (redis-py with asyncio)
    "nats-py>=2.6.0",  # Async NATS with JetStream
    "qdrant-client>=1.7.0",  # Async Qdrant vector database
    "aiomqtt>=2.0.0",  # Async MQTT client
    "duckdb>=0.10.0",  # DuckDB analytics database
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/isa-platform/isA_Cloud"
Repository = "https://github.com/isa-platform/isA_Cloud"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
