[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isa-common"
version = "0.4.0"
description = "Shared Python infrastructure library for isA platform"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "isA Platform", email = "dev@isa-platform.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# Dependencies use minimum versions (>=) since this is a library that should
# be compatible with consumers' dependency versions. For reproducible builds,
# see requirements.txt which pins exact versions (==).
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-consul2>=0.1.5",
    # Native async database/service drivers
    "asyncpg>=0.29.0",  # Async PostgreSQL
    "neo4j>=5.0.0",  # Neo4j native driver
    "aioboto3>=12.0.0",  # Async S3/MinIO client
    "aiofiles>=23.0.0",  # Async file I/O for streaming downloads
    "redis>=5.0.0",  # Async Redis (redis-py with asyncio)
    "nats-py>=2.6.0",  # Async NATS with JetStream
    "qdrant-client>=1.9.0",  # Async Qdrant vector database
    "aiomqtt>=2.0.0",  # Async MQTT client
    "aiosqlite>=0.19.0",  # Async SQLite
    "duckdb>=0.10.0",  # DuckDB analytics database
    "aiohttp>=3.9.0",  # Async HTTP client (Loki)
]

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.20.0",
    "starlette>=0.27.0",  # For metrics middleware/endpoint
]
tracing = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
tracing-extras = [
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
]
observability = [
    "isa-common[metrics,tracing]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/isa-platform/isA_Cloud"
Repository = "https://github.com/isa-platform/isA_Cloud"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
