[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isa-common"
version = "0.4.0"
description = "Shared Python infrastructure library for isA platform"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "isA Platform", email = "dev@isa-platform.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# Dependencies use minimum versions (>=) since this is a library that should
# be compatible with consumers' dependency versions. For reproducible builds,
# see requirements.txt which pins exact versions (==).
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-consul2>=0.1.5",
    # Native async database/service drivers
    "asyncpg>=0.29.0",  # Async PostgreSQL
    "neo4j>=5.0.0",  # Neo4j native driver
    "aioboto3>=13.0.0",  # Async S3/MinIO client (>=13 lifts botocore's urllib3<2.1 cap)
    "aiofiles>=23.0.0",  # Async file I/O for streaming downloads
    "redis>=5.0.0",  # Async Redis (redis-py with asyncio)
    "nats-py>=2.6.0",  # Async NATS with JetStream
    "qdrant-client>=1.9.0",  # Async Qdrant vector database
    "falkordb>=1.0.0",  # Async FalkorDB graph database (Redis module)
    "aiomqtt>=2.0.0",  # Async MQTT client
    "aiosqlite>=0.19.0",  # Async SQLite
    "duckdb>=0.10.0",  # DuckDB analytics database
    "aiohttp>=3.9.0",  # Async HTTP client (Loki)
]

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.20.0",
    "starlette>=0.27.0",  # For metrics middleware/endpoint
]
tracing = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
tracing-extras = [
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
]
observability = [
    "isa-common[metrics,tracing]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    # Lint tools are EXACTLY pinned so CI lint is deterministic and matches the
    # revs in .pre-commit-config.yaml. Bump both files together (or run
    # `pre-commit autoupdate` and sync these). See isA_Cloud#285.
    "black==26.5.1",
    "isort==8.0.1",
    "ruff==0.15.13",
]

[project.urls]
Homepage = "https://github.com/isa-platform/isA_Cloud"
Repository = "https://github.com/isa-platform/isA_Cloud"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Import sorting (I) is intentionally NOT selected here: isort owns import
# ordering. Running ruff's isort and standalone isort together produces a
# ping-pong on edge cases (e.g. mixed `import (...)` + `import X as Y`).
select = ["E", "F", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test and example code follow looser conventions than library source:
# - F841: assert-by-binding / probe assignments are common in tests
# - N806: PascalCase locals are idiomatic for mocked/patched class objects
# - E402: imports after sys.path tweaks in standalone test scripts
# - E722: bare excepts in throwaway example scripts
# Patterns are `**/`-prefixed so they match whether ruff runs from the repo
# root (pre-commit) or from inside isA_common/ (the CI lint job).
"**/tests/**" = ["F841", "N806", "E402"]
"**/examples/**" = ["F841", "E722"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
